==== LimeChat 0.16.5 ====

2008-03-03  Satoshi Nakagawa <artension@gmail.com>

	Moved the themes directory from '~/Library/LimeChat' to '~/Library/Application Support/LimeChat'.

2008-03-03  Satoshi Nakagawa <artension@gmail.com>

	Changed the default transcripts directory to '~/Documents/LimeChat Transcripts'.

2008-03-03  Satoshi Nakagawa <artension@gmail.com>

	More smaller font for the member list.

2008-03-03  Satoshi Nakagawa <artension@gmail.com>

	Added "Reveal in Finder" menu item for receiving items on the dcc dialog.
	Changed for more robust way to draw the transfer lists on the dcc dialog.

2008-03-03  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, an item should be selected prior to starting edit on the startup dialog.

2008-03-03  Satoshi Nakagawa <artension@gmail.com>

	Assigned double click to reveal a file in Finder on the dcc receiving transfer list.

2008-03-03  Satoshi Nakagawa <artension@gmail.com>

	Added an option, "Auto accept file transfers".
	Added "Open File" menu item for receiving items on the dcc dialog.

2008-03-03  Satoshi Nakagawa <artension@gmail.com>

	Made the filter text field smaller on the list dialog.

2008-03-03  Satoshi Nakagawa <artension@gmail.com>

	Tweaked themes.

2008-03-03  Satoshi Nakagawa <artension@gmail.com>

	Improved drawing code around highlight indicators.

2008-03-02  Satoshi Nakagawa <artension@gmail.com>

	Removed a server name from place part in the console log.

2008-03-02  Satoshi Nakagawa <artension@gmail.com>

	Added a filter text field on the list dialog.

2008-03-02  Satoshi Nakagawa <artension@gmail.com>

	Changed to render selected items with right foreground colors.

2008-03-02  Satoshi Nakagawa <artension@gmail.com>

	Updated short cut keys for "Mark Scrollback" and "Clear Mark" in the log menu.

2008-03-02  Satoshi Nakagawa <artension@gmail.com>

	Assigned cmd+opt+shift+R to "Mark All as Read and Clear All Marks".

2008-03-02  Satoshi Nakagawa <artension@gmail.com>
